<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="24dp"
        android:rotationX="13"
        android:text="@string/textview"
        android:textColor="@color/red_200"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <ImageButton
        android:id="@+id/Donuts"
        android:layout_width="142dp"
        android:layout_height="140dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="24dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/donuts"
        android:onClick="switchToDonutPage"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/donut" />

    <TextView
        android:id="@+id/donutsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginEnd="252dp"
        android:layout_marginBottom="32dp"
        android:text="@string/donutsTextView"
        android:textColor="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Donuts"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/Coffee"
        android:layout_width="142dp"
        android:layout_height="140dp"
        android:layout_marginTop="83dp"
        android:layout_marginBottom="24dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/coffee"
        android:onClick="switchToCoffeePage"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/coffee"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="32dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:text="@string/orderCoffee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/donutsText"
        app:layout_constraintTop_toBottomOf="@+id/Coffee"
        android:textColor="@color/purple_200"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/basket"
        android:layout_width="140dp"
        android:layout_height="142dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="164dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/basket"
        android:onClick="switchToBasketPage"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cartimage"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginEnd="252dp"
        android:layout_marginBottom="32dp"
        android:text="@string/orderBasket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basket"
        android:textColor="@color/purple_200"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/store"
        android:layout_width="142dp"
        android:layout_height="142dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="164dp"
        android:contentDescription="@string/list"
        android:onClick="switchToStoreOrderPage"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/basket"
        app:srcCompat="@drawable/order" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="32dp"
        android:text="@string/storeOrders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/store"
        android:textColor="@color/purple_200"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>